--- a/style.css
+++ b/style.css
@@ -79,3 +79,17 @@ nav img{
 .giphyHere li img:hover {
     transform: scale(1.05)
 }
+
+.showPic{
+    background-color: hsla(0, 0%, 0%, 0.767);
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+    width:100%;
+    height: 100%;
+}
+.showPic img{
+    padding-top:10vh;
+    width:50vmax;
+}
