--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 body{
     margin:0;
-    text-align: center;
     padding: 0;
+    text-align: center;
     font-family: 'Roboto', sans-serif;
 }
 
 /* NAVBAR */
 nav{
+    position: relative;
+    box-sizing: content-box;
     width:100%;
-    height:100px;
     box-shadow: 10px 9px 55px -16px rgba(0, 0, 0, 0.205);
 }
 .navbar{
     margin: 0 auto;
-    padding: 0;
+    padding: 15px;
     max-width: 1500px;
     overflow: hidden;
     text-align: center;
@@ -28,17 +29,17 @@ nav{
     width:20%;
     background: transparent;
     border: 2px solid rgb(40, 255, 105);
-    border-radius: 2vw;
+    border-radius: 20px;
     display: block;
     font-size: 1rem;
     cursor: pointer;
 }
 .navbar .active{
     border: 2px solid rgb(255, 0, 157);
-
 }
-nav img{
-    height: 100px;
+nav h1{
+    padding: 10px 0 0 0;
+    margin:0;
 }
 
 .searchInput{
@@ -47,37 +48,40 @@ nav img{
 }
 
 .searchInput button{
-    border-radius: 0 2vw 2vw 0;
+    border-radius: 0 20px 20px 0;
     width: 100px;
     border-left: none;
     cursor: pointer;
 
 }
 .searchInput input{
-    border-radius: 2vw 0 0 2vw;
+    border-radius: 20px 0 0 20px;
     border: 2px solid rgb(40, 255, 105);
     border-right: none;
     padding-left: 10px;
+    width: 100%;
 }
 
 .navbar > *{
     transition: transform 0.3s, box-shadow 0.3s;
+    margin: 5px;
 }
 .navbar > *:hover{
     transform:scale(1.1);
     box-shadow: 3px 9px 22px -15px rgba(0,0,0,0.75);
 }
-/* main ul */
+
+
+/* MAIN UL */
 .giphyHere {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 10px;
     grid-auto-flow: unset;
     list-style: none;
     margin: 1em auto;
-    padding-top:50px;
     max-width: 1200px;
-
+    padding: 0;
 }
 .giphyHere li {
     border: 1px solid #ccc;
@@ -99,11 +103,11 @@ nav img{
 .showMore{
     height: 50px;
     max-width: 830px;
-    width: 100%;
+    width: 80%;
     background: transparent;
     border: 2px solid rgb(40, 255, 105);
     border-radius: 20;
-    margin:20px 0px 20px 50px;
+    margin:20px 0px 50px 0 ;
     cursor: pointer;
     transition: transform 0.2s;
 }
@@ -136,4 +140,25 @@ nav img{
     padding-top:3%;
     width:70vmax;
     max-width: 100vmin;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 550px){
+    .navbar{
+        flex-direction: column;
+    }
+    .navbar button{
+        height: 40px;
+        width:80vw;
+    }
+    .searchInput button{
+        border-radius: 0 20px 20px 0;
+        width: 30vw;
+        min-width: 70px;
+    }
+    .searchInput #input{
+        border-radius: 20px 0 0 20px;
+        width: 50vw;
+    }
 }
